Fix long-standing bug that prevents vertical scrolling on the device list when it has horizontal scrolling.
It only happens on latest versions of Chrome when used along a MacBook Trackpad.
Couldn't reproduce on other browsers/hardware.

--- a/res/web_modules/nine-bootstrap/nine-bootstrap.scss
+++ b/res/web_modules/nine-bootstrap/nine-bootstrap.scss
@@ -980,6 +980,11 @@ input[type="search"].input-sm {
   overflow: inherit !important;
 }
 
+/* FIX Scrolling bug that only happens on latest Chrome + Macbook Trackpad */
+.pane-center.fa-pane-scroller {
+  z-index: 10;
+}
+
 .input-group-btn .btn {
   margin-right: 0;
 }
